# AIORC

./: Cargo.toml  HANDOFF.md  README.md  build.rs  config.json
proto/: orchestrator.proto
src/: lib.rs  main.rs
src/core/: config.rs  error.rs  metrics.rs  mod.rs  types.rs
src/gateway/: handlers.rs  mod.rs  orchestrator_gateway.rs
src/inference/: inference_engine.rs  mod.rs  model_sidecar.rs
src/memory/: memory_manager.rs  mod.rs  semantic_cache.rs  warm_swap.rs
src/routing/: complexity_scorer.rs  mod.rs  router.rs  semantic_embedder.rs  service_registry.rs
